[package]
name = "learn_25_cargo"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A fun game where you guess what number the computer has chosen."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
